# plugin-atropos

./: README.md  pyproject.toml  pyroject.toml
.github/workflows/: pypi.yaml
examples/: gsm8k_server.py  train-fft.yaml  train-lora-liger.yaml  train-lora.yaml  train.yaml
src/plugin_atropos/: args.py  datasets.py  plugin.py  vllm_serve.py
src/plugin_atropos/trainers/: grpo.py
