[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axolotl-plugin-atropos"
version = "0.0.2"
description = "Axolotl Plugin integrating Nous Research's Atropos for RL"
authors = [{ name="Wing Lian" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "torch>=2.7.0",
    "axolotl>=0.10.0",
    "requests",
    "trl==0.18.2",
    "vllm>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]
